--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-    <h1 id="question">Question</h1>
+    <div class="content">
+    <div>
+    <h1 id="question" class="hide">Question</h1>
+    </div>
+    <div class="answers hide">
     <button class="btn">Answer 1</button>
     <button class="btn">Answer 2</button>
     <button class="btn">Answer 3</button>
     <button class="btn">Answer 4</button>
+    </div>
 
     <div class="controls">
         <button id="start-btn" class="start-btn btn">Start</button>
         <button id="next-btn" class="next-btn btn hide">Next</button>
+    </div>
     </div>
     <script src="./assets/js/quiz.js"></script>
 </body>
