--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 </head>
 <body>
     <div class="content">
+        <div id="container" class="hide">
     <div>
-    <h1 id="question" class="hide">Question</h1>
+    <h1 id="question">Question</h1>
     </div>
-    <div class="answers hide">
+    <div class="answers">
     <button class="btn">Answer 1</button>
     <button class="btn">Answer 2</button>
     <button class="btn">Answer 3</button>
     <button class="btn">Answer 4</button>
     </div>
+    </div> 
 
     <div class="controls">
         <button id="start-btn" class="start-btn btn">Start</button>
