hid start button and show questions with its corresponding functions

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
     <h1 id="question">Question</h1>
     </div>
-    <div class="answers">
+    <div class="answers" id="answers">
     <button class="btn">Answer 1</button>
     <button class="btn">Answer 2</button>
     <button class="btn">Answer 3</button>
