completed the quiz and saved score

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-    <div class="content">
+    <div class="content" id="content">
         <div id="container" class="hide">
     <div>
     <h1 id="question">Question</h1>
+    <h2 id="subheader" class="hide"></h2>
     </div>
     <div class="answers" id="answers">
     <button class="btn">Answer 1</button>
@@ -24,10 +25,12 @@
     <div class="controls">
         <button id="start-btn" class="start-btn btn">Start</button>
         <button id="next-btn" class="next-btn btn hide">Next</button>
+        <button id="finish-btn" class="finish-btn btn hide">Finish</button>
     </div>
     </div>
 
     
+
     <script src="./assets/js/quiz.js"></script>
 </body>
 </html>
