added play-again-btn and exit-btn

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div>
     <h1 id="question">Question</h1>
     <h2 id="subheader" class="hide"></h2>
+    <input type="text" id="input" name="name-input" class="input-text hide" placeholder="Enter name" />
     </div>
     <div class="answers" id="answers">
     <button class="btn">Answer 1</button>
@@ -26,6 +27,9 @@
         <button id="start-btn" class="start-btn btn">Start</button>
         <button id="next-btn" class="next-btn btn hide">Next</button>
         <button id="finish-btn" class="finish-btn btn hide">Finish</button>
+        <button id="submit-btn" class="submit-btn btn hide">Submit</button>
+        <button id="again-btn" class="again-btn btn hide">Play Again</button>
+        <button id="exit-btn" class="exit-btn btn hide">Exit</button>
     </div>
     </div>
 
