displayed high scores and set the timer

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
+    <div id="timer"></div>
     <div class="content" id="content">
         <div id="container" class="hide">
     <div>
     <h1 id="question">Question</h1>
     <h2 id="subheader" class="hide"></h2>
+    <ul id="highScore">
+
+    </ul>
     <input type="text" id="input" name="name-input" class="input-text hide" placeholder="Enter name" />
     </div>
     <div class="answers" id="answers">
