added functionality to playAgain-btn and exit-btn

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div>
     <h1 id="question">Question</h1>
     <h2 id="subheader" class="hide"></h2>
-    <ul id="highScore">
+    <ul id="highScore" class="hide">
 
     </ul>
     <input type="text" id="input" name="name-input" class="input-text hide" placeholder="Enter name" />
@@ -32,7 +32,7 @@
         <button id="next-btn" class="next-btn btn hide">Next</button>
         <button id="finish-btn" class="finish-btn btn hide">Finish</button>
         <button id="submit-btn" class="submit-btn btn hide">Submit</button>
-        <button id="again-btn" class="again-btn btn hide">Play Again</button>
+        <a href="/" id="again-btn" class="again-btn btn hide">Play Again</a>
         <button id="exit-btn" class="exit-btn btn hide">Exit</button>
     </div>
     </div>
