finished adding/fixing little details

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
-    <div id="timer"></div>
+    
     <div class="content" id="content">
         <div id="container" class="hide">
     <div>
@@ -32,8 +32,9 @@
         <button id="next-btn" class="next-btn btn hide">Next</button>
         <button id="finish-btn" class="finish-btn btn hide">Finish</button>
         <button id="submit-btn" class="submit-btn btn hide">Submit</button>
-        <a href="/" id="again-btn" class="again-btn btn hide">Play Again</a>
+        <a href="index.html" id="again-btn" class="again-btn btn hide">Play Again</a>
         <button id="exit-btn" class="exit-btn btn hide">Exit</button>
+        <div id="timer" class="timer hide"></div>
     </div>
     </div>
 
